# edu

./: .gitignore  CMakeLists.txt  interpreter.h  main.cpp  symbols.h  token.h  variable.h
C_Tut/src/: CMakeLists.txt  main.c
calculator/src/: CMakeLists.txt  interpreter.cpp  main.cpp
io/src/: CMakeLists.txt  File.cpp  descriptor.h  file.h  main.cpp
src/: CMakeLists.txt  main.cpp  token.cpp  variable.cpp
vector/src/: CMakeLists.txt  main.cpp  vector.h
